Features Based Environment Changes

--- a/src/Environment/environment.ipynb
+++ b/src/Environment/environment.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-29 11:54:07.656945: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-01-29 11:54:07.710237: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-01-29 11:54:07.710275: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-01-29 11:54:07.711677: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-01-29 11:54:07.719086: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-01-29 11:54:07.719828: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-01-29 11:54:08.709743: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import abc\n",
     "import numpy as np\n",
@@ -23,7 +38,9 @@
     "from tf_agents.trajectories import time_step as ts\n",
     "from tf_agents.trajectories import trajectory\n",
     "from tf_agents.trajectories import policy_step\n",
-    "from tf_agents.typing import types"
+    "from tf_agents.typing import types\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -35,7 +52,8 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "sys.path.append('../..')\n",
-    "from Components.feature_extractor import FeatureExtractor"
+    "from Components.feature_extractor import FeatureExtractor\n",
+    "from Components.data_processing import data_process"
    ]
   },
   {
@@ -232,12 +250,17 @@
    "source": [
     "class MyModelSelectionEnv(InitialEnv):\n",
     "\n",
-    "    def __init__(self, list_pred_sc, list_thresholds, list_gtruth):\n",
+    "    def __init__(self, list_pred_sc, list_thresholds, list_gtruth, time_series_dir):\n",
     "\n",
     "        super().__int__(list_pred_sc, list_thresholds, list_gtruth)\n",
     "\n",
+    "        self.time_series = pd.read_csv(time_series_dir)\n",
+    "        self.subsequences = data_process(time_series_dir)\n",
+    "\n",
     "        action_spec = array_spec.BoundedArraySpec(shape=(2,), dtype=np.int32, minimum=0, maximum = 1, name='Select Models')\n",
     "        observation_spec = array_spec.BoundedArraySpec(shape=(30,), dtype=np.int32, name='observation')\n",
+    "\n",
+    "    def _reset(self)\n",
     "\n",
     "    def _observe(self):\n",
     "\n",
