--- a/src/Environment/environment.ipynb
+++ b/src/Environment/environment.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-29 11:54:07.656945: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-29 11:54:07.710237: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-01-29 11:54:07.710275: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-01-29 11:54:07.711677: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-29 11:54:07.719086: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-29 11:54:07.719828: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-02-03 12:01:34.220819: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-02-03 12:01:34.275978: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-03 12:01:34.276015: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-03 12:01:34.277423: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-03 12:01:34.284956: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-02-03 12:01:34.285436: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-29 11:54:08.709743: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-02-03 12:01:35.475758: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,26 @@
     "        batch_size=self.batch_size,\n",
     "        reward_spec=self.reward_spec(),\n",
     "    )\n",
+    "  \n",
+    "  \"\"\"\n",
+    "    ts.restart(observation: types.NestedTensororArray,\n",
+    "    batch_size: Optional[types.Int]=None,\n",
+    "    reward_spec: Optional[types.NestedSpec]=None,\n",
+    "    )\n",
+    "\n",
+    "    Returns a `TimeStep` with `step_type` set equal to `StepType.FIRST`.\n",
+    "\n",
+    "  Args:\n",
+    "    observation: A NumPy array, tensor, or a nested dict, list or tuple of\n",
+    "      arrays or tensors.\n",
+    "    batch_size: (Optional) A python or tensorflow integer scalar. If not\n",
+    "      provided, the environment will not be considered as a batched environment.\n",
+    "    reward_spec: If provided, the reward in the returned `TimeStep` will be\n",
+    "      compatible with the provided `reward_spec`.\n",
+    "\n",
+    "  Returns:\n",
+    "    A `TimeStep`.\n",
+    "  \"\"\"\n",
     "\n",
     "  def _step(self, action: types.NestedArray) -> ts.TimeStep:\n",
     "    \"\"\"Returns a time step containing the reward for the action taken.\n",
@@ -179,7 +199,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyModelSelectionEnv(BanditPyEnvironment):\n",
+    "\n",
+    "    def __init__(self, time_series_dir: str, list_thresholds: List[float], list_gtruth: List[float]):\n",
+    "\n",
+    "        super().__int__(list_thresholds, list_gtruth)\n",
+    "\n",
+    "        self.time_series = pd.read_csv(time_series_dir)\n",
+    "        self.subsequences = data_process(time_series_dir)\n",
+    "\n",
+    "        self.list_thresholds = list_thresholds\n",
+    "\n",
+    "        self.features_obj = FeatureExtractor()\n",
+    "\n",
+    "        self.action_list = []\n",
+    "\n",
+    "        action_spec = array_spec.BoundedArraySpec(shape=(2,), dtype=np.int32, minimum=0, maximum = 1, name='Select Models')\n",
+    "        observation_spec = array_spec.BoundedArraySpec(shape=(1, 318), dtype=np.float64, name='observation')\n",
+    "\n",
+    "        super(MyModelSelectionEnv, self).__init__(observation_spec, action_spec)\n",
+    "\n",
+    "    def _reset(self):\n",
+    "\n",
+    "        self.pointer = 0\n",
+    "        self.done = False\n",
+    "\n",
+    "        starter = self._feature_extractor(self.subsequences[0])\n",
+    "\n",
+    "        return ts.restart(starter)\n",
+    "    \n",
+    "\n",
+    "    def _feature_extractor(self, subseq):\n",
+    "\n",
+    "        return self.features_obj.feature_extractor_data(subseq)\n",
+    "    \n",
+    "    def _step(self, action):\n",
+    "\n",
+    "        reward = self._apply_action(action)\n",
+    "        \n",
+    "        self.pointer += 1\n",
+    "\n",
+    "        if self.pointer >= self.len_data:\n",
+    "            self.done = True\n",
+    "        else:\n",
+    "            self.done = False\n",
+    "        \n",
+    "        return ts.termination(self._observe(), reward)\n",
+    "\n",
+    "                \n",
+    "    def _observe(self):\n",
+    "\n",
+    "        current_subsequence = self.subsequences[self.pointer]\n",
+    "        self._observation = self._feature_extractor(current_subsequence)\n",
+    "        return self._observation\n",
+    "    \n",
+    "    \n",
+    "    def _apply_action(self, action):\n",
+    "\n",
+    "        if action == 0:\n",
+    "            model = pickle.load(open(f'../../saved_models/iforest_dodgers_v2.sav','rb'))\n",
+    "            feats = self.subsequences[self.pointer]\n",
+    "            score = model.decision_function(feats)\n",
+    "\n",
+    "            if score < self.list_thresholds[0]:\n",
+    "                label = 1\n",
+    "            else:\n",
+    "                label = 0\n",
+    "\n",
+    "        elif action == 1:\n",
+    "            model = pickle.load(open(f'../../saved_models/osvm_dodgers_v2.sav', 'rb'))\n",
+    "            feats = self._observe()\n",
+    "            score = model.decision_function(feats)\n",
+    "\n",
+    "            if score > self.list_thresholds[1]:\n",
+    "                label = 1\n",
+    "            else:\n",
+    "                label = 0\n",
+    "\n",
+    "        reward = self._reward_function(label)\n",
+    "\n",
+    "        self.action_list.append(action)\n",
+    "        \n",
+    "        return reward\n",
+    "    \n",
+    "    def _reward_function(self, label):\n",
+    "\n",
+    "        if self.gtruth[self.pointer]==1: # If the ground truth is 1 anomaly\n",
+    "            if label==1: # If the model predicts 1 anomaly correctly - True Positive (TP)\n",
+    "                reward = 1\n",
+    "            else: # If the model predicts 0 normal incorrectly - False Negative (FN)\n",
+    "                reward = -1.5\n",
+    "        else: # If the ground truth is 0 normal\n",
+    "            if label==1: # If the model predicts 1 anomaly incorrectly - False Positive (FP)\n",
+    "                reward = -0.5\n",
+    "            else: # If the model predicts 0 normal correctly - True Negative (TN)\n",
+    "                reward = 0.1\n",
+    "\n",
+    "        return reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,68 +369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyModelSelectionEnv(InitialEnv):\n",
-    "\n",
-    "    def __init__(self, list_pred_sc, list_thresholds, list_gtruth, time_series_dir):\n",
-    "\n",
-    "        super().__int__(list_pred_sc, list_thresholds, list_gtruth)\n",
-    "\n",
-    "        self.time_series = pd.read_csv(time_series_dir)\n",
-    "        self.subsequences = data_process(time_series_dir)\n",
-    "\n",
-    "        action_spec = array_spec.BoundedArraySpec(shape=(2,), dtype=np.int32, minimum=0, maximum = 1, name='Select Models')\n",
-    "        observation_spec = array_spec.BoundedArraySpec(shape=(30,), dtype=np.int32, name='observation')\n",
-    "\n",
-    "    def _reset(self)\n",
-    "\n",
-    "    def _observe(self):\n",
-    "\n",
-    "        dodgers_features = FeatureExtractor()\n",
-    "        self._observation = dodgers_features.feature_extractor('Dodgers')\n",
-    "        return self._observation\n",
-    "    \n",
-    "    def _apply_action(self, action):\n",
-    "\n",
-    "        if action == 0:\n",
-    "            model = pickle.load(open(f'../../saved_models/iforest_dodgers_v1.sav','rb'))\n",
-    "            feats = self._observe()\n",
-    "            score = model.decision_function(feats)\n",
-    "\n",
-    "        elif action == 1:\n",
-    "            model = pickle.load(open(f'../../saved_models/osvm_dodgers_v1.sav', 'rb'))\n",
-    "            feats = self._observe()\n",
-    "            score = model.decision_function(feats)\n",
-    "\n",
-    "            reward = self._reward_function(score)\n",
-    "        \n",
-    "        return reward\n",
-    "    \n",
-    "    def _reward_function(self, score):\n",
-    "\n",
-    "        if self.gtruth[self.pointer]==1: # If the ground truth is 1 anomaly\n",
-    "            if observation[2]==1: # If the model predicts 1 anomaly correctly - True Positive (TP)\n",
-    "                reward = 1\n",
-    "            else: # If the model predicts 0 normal incorrectly - False Negative (FN)\n",
-    "                reward = -1.5\n",
-    "        else: # If the ground truth is 0 normal\n",
-    "            if observation[2]==1: # If the model predicts 1 anomaly incorrectly - False Positive (FP)\n",
-    "                reward = -0.5\n",
-    "            else: # If the model predicts 0 normal correctly - True Negative (TN)\n",
-    "                reward = 0.1\n",
-    "\n",
-    "        return reward"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env = MyModelSelectionEnv()"
+   ]
   }
  ],
  "metadata": {
